--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -1,3 +1,6 @@
-<p>
-  map works!
-</p>
+<!-- <ul>
+  <li *ngFor="let offer of offers">
+    {{offer.title}} - [{{offer.coordinates.latitude}} , {{offer.coordinates.longitude}}]
+  </li>
+</ul> -->
+<div #map style="width:100%;height:400px"></div>
