JN - Modifying offer page to get latitud and longitude from a place

--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -1,6 +1,6 @@
 <form [formGroup]="formdata" (ngSubmit) = "createOffer(formdata.value)">
   <div class="form-group">
-    <label>Título</label>
+    <label>Nombre</label>
     <input type="text" class="form-control" id="offerTitle" placeholder="Nombre del sitio" formControlName="offerTitle">
   </div>
   <div class="form-group">
