--- a/src/app/_components/register/register.component.html
+++ b/src/app/_components/register/register.component.html
@@ -1,3 +1,68 @@
-<p>
-  register works!
-</p>
+<div class="container">
+  <div class="container">
+    <div [hidden]="submitted">
+      <h1>Sign in</h1>
+      <form (ngSubmit)="onSubmit()" #registerForm="ngForm">
+        <div class="form-group">
+          <label for="name">Name</label>
+          <input type="text" class="form-control" id="name"
+                 required
+                 [(ngModel)]="model.name" name="name"
+                 #name="ngModel">
+          <div [hidden]="name.valid || name.pristine"
+               class="alert alert-danger">
+            Name is required
+          </div>
+        </div>
+  
+        <div class="form-group">
+          <label for="lastName">Last Name</label>
+          <input type="text" class="form-control" id="lastName"
+                 [(ngModel)]="model.lastName" name="lastName">
+        </div>
+
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input type="email" class="form-control" id="email"
+                 [(ngModel)]="model.email" name="email">
+        </div>
+        
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="text" class="form-control" id="password"
+                 [(ngModel)]="model.password" name="password">
+        </div>
+
+        <div class="form-group">
+          <label for="password2">Confirm password</label>
+          <input type="text" class="form-control" id="password2"
+                 [(ngModel)]="model.password2" name="password2">
+        </div>
+  
+        
+  
+        <button type="submit" class="btn btn-success" [disabled]="!registerForm.form.valid" >Submit</button>
+        <!-- <button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">New Hero</button> -->
+  
+      </form>
+    </div>
+    <div [hidden]="!submitted">
+      <h2>You submitted the following:</h2>
+      <div class="row">
+        <div class="col-xs-3">Name</div>
+        <div class="col-xs-9">{{ showUser().name }}</div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">Alter Ego</div>
+        <div class="col-xs-9">{{ showUser().lastName }}</div>
+      </div>
+      <div class="row">
+        <div class="col-xs-3">Power</div>
+        <div class="col-xs-9">{{ showUser().email }}</div>
+      </div>
+      <br>
+      <button class="btn btn-primary" (click)="submitted=false">Edit</button>
+    </div>
+  </div>
+</div>
+  
