--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -1,12 +1,16 @@
-<form [formGroup]="formdata" (ngSubmit) = "createOffer(formdata.value)">
-  <div class="form-group">
-    <label>Nombre</label>
-    <input type="text" class="form-control" id="offerTitle" placeholder="Nombre del sitio" formControlName="offerTitle">
+<div class="container">
+    <div class="container">
+      <form [formGroup]="formdata" (ngSubmit) = "createOffer(formdata.value)">
+        <div class="form-group">
+          <label>Nombre</label>
+          <input type="text" class="form-control" id="offerTitle" placeholder="Nombre del sitio" formControlName="offerTitle">
+        </div>
+        <div class="form-group">
+          <label>Dirección</label>
+          <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
+          type="text" class="form-control" #search formControlName="offerLocation">
+        </div>
+        <button type="submit" [disabled]="!formdata.valid" value="Guardar">Guardar</button>
+      </form>
   </div>
-  <div class="form-group">
-    <label>Dirección</label>
-    <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
-    type="text" class="form-control" #search formControlName="offerLocation">
-  </div>
-  <button type="submit" [disabled]="!formdata.valid" value="Guardar">Guardar</button>
-</form>
+</div>
