Modifying offer card list and making style for marker in map

--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -1,8 +1,8 @@
 <mat-grid-list cols="4" rowHeight="600px">
-    <mat-grid-tile [colspan]="1" [rowspan]="2">
+    <mat-grid-tile [colspan]="2" [rowspan]="2" id="offer-card-list">
         <offer-card-list></offer-card-list>
     </mat-grid-tile>
-    <mat-grid-tile [colspan]="3" [rowspan]="2">
+    <mat-grid-tile [colspan]="2" [rowspan]="2" id="map-site">
         <div #map style="width:100%;height:100%"></div>
     </mat-grid-tile>
 </mat-grid-list>
