--- a/src/app/_components/offer/offer.card.component.html
+++ b/src/app/_components/offer/offer.card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="example-card">
+<!--mat-card class="example-card">
   <mat-card-header>
     <div mat-card-avatar class="example-header-image"></div>
     <mat-card-title>Shiba Inu</mat-card-title>
@@ -14,4 +14,21 @@
   <mat-card-actions>
     <button mat-button>LIKE</button>
   </mat-card-actions>
-</mat-card>
+</mat-card-->
+
+<div *ngFor="let offer of offers">
+  <div class="card mb-3" style="max-width: 540px;">
+    <div class="row no-gutters">
+      <div class="col-md-4">
+        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" class="card-img" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">{{offer.title}}</h5>
+          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
