--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -10,6 +10,14 @@
           <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
           type="text" class="form-control" #search formControlName="offerLocation">
         </div>
+        <div class="custom-file">
+            <label>Seleccionar imagen</label>
+          <input type="file" class="custom-file-input" id="validatedCustomFile" required 
+          formControlName="offerFile" (change)="uploadFile($event.target.files)">
+          <label class="custom-file-label" for="validatedCustomFile">{{fileName}}</label>
+          <div class="invalid-feedback">Example invalid custom file feedback</div>
+          <label *ngIf="showErrorUploadFile">Por favor selecciona un archivo de tipo png, jpg o jpeg</label>
+        </div>
         <button type="submit" [disabled]="!formdata.valid" value="Guardar">Guardar</button>
       </form>
   </div>
