--- a/src/app/_components/register/register.component.html
+++ b/src/app/_components/register/register.component.html
@@ -78,7 +78,7 @@
     <div [hidden]="showError || !submitted">
       <h2>Bienvenido {{ showUser().name }}, tus registro fue exitoso</h2>
       <br>
-      <button class="btn btn-primary" >Home</button>
+      <button class="btn btn-primary" (click)="home()">Home</button>
     </div>
   </div>
 </div>
