--- a/src/app/_components/offer-list/offer-card-list.component.html
+++ b/src/app/_components/offer-list/offer-card-list.component.html
@@ -2,7 +2,7 @@
 <offer-card></offer-card-->
 
 <div *ngFor="let offer of offers">
-    <div class="card mb-3" style="max-width: 540px;">
+    <div class="card mb-3" style="max-width: 540px;" (mouseenter) ="mouseEnter('div a') ">
         <div class="row no-gutters">
         <div class="col-md-4">
             <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" class="card-img" alt="...">
