JN - Updating list of offer

--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -5,15 +5,39 @@
                 (mouseleave)="mouseLeave(offer)">
                 <div class="row no-gutters">
                     <div class="col-md-4">
-                        <img src="https://material.angular.io/assets/img/examples/shiba2.jpg" class="card-img"
-                            alt="...">
+                        <img src="{{'data:image/jpg;base64,' + offer.file}}" class="card-img"
+                        alt="..."/>
                     </div>
                     <div class="col-md-8">
                         <div class="card-body">
                             <h5 class="card-title">{{offer.title}}</h5>
                             <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
                                 additional content. This content is a little bit longer.</p>
-                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                            <div class="row">
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        <div class="col-md-8">
+                                            <p class="card-text"><small class="text-muted">Danos tu opinión!! </small></p>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i class="fas fa-thumbs-up"></i>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i class="fas fa-thumbs-down"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-8">
+                                    <div class="row">
+                                        <div class="col-md-8 clear">
+                                            <input type="text" placeholder="Comentario" />
+                                        </div>
+                                        <div class="col-md-4">
+                                            <button type="button" class="btn btn-primary">Votar</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -36,8 +60,7 @@
             <div class="row flex-nowrap">
                 <div *ngFor="let offer of offers">
                     <div class="card card-block" (click)="showMarker(offer)">
-                        <img class="card-img-top" src="https://material.angular.io/assets/img/examples/shiba2.jpg"
-                            alt="Card image cap">
+                        <img class="card-img-top" src="{{'data:image/jpg;base64,' + offer.file}}" alt="Card image cap" />
                         <div class="card-body">
                             <h5 class="card-title">{{offer.title}}</h5>
                             <p class="card-text">Some quick example text to build on the card title and make up the bulk
