--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -1,3 +1,4 @@
+<app-navbar></app-navbar>
 <div class="container">
     <div class="container">
       <form [formGroup]="formdata" (ngSubmit) = "createOffer(formdata.value)">
