--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -7,6 +7,11 @@
           <input type="text" class="form-control" id="offerTitle" placeholder="Nombre del sitio" formControlName="offerTitle">
         </div>
         <div class="form-group">
+          <label>Descripci&oacute;n</label>
+          <textarea type="text" class="form-control" id="description" placeholder="Detalla aquí tu oferta" formControlName="description">
+          </textarea>
+        </div>
+        <div class="form-group">
           <label>Dirección</label>
           <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
           type="text" class="form-control" #search formControlName="offerLocation">
