--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -3,9 +3,20 @@
     <div class="container">
       <form [formGroup]="formdata" (ngSubmit) = "createOffer(formdata.value)">
         <div class="form-group">
-          <label>Nombre</label>
+          <label>Titulo</label>
           <input type="text" class="form-control" id="offerTitle" placeholder="Nombre del sitio" formControlName="offerTitle">
         </div>
+        <div class="form-group">
+          <label for="cars">Tipo de oferta</label>
+
+          <select id="cars" class="form-control" required id="offerType" placeholder="Tipo de oferta" formControlName="offerType">
+            <option value="" selected>Seleccione</option>
+            <option value="make in home">Hecho en casa</option>
+            <option value="service">Servicio</option>
+            <option value="venta">Venta de articulos</option>
+            <option value="venta">Alquiler</option>
+          </select>
+       </div>
         <div class="form-group">
           <label>Descripci&oacute;n</label>
           <textarea type="text" class="form-control" id="description" placeholder="Detalla aquí tu oferta" formControlName="description">
@@ -16,15 +27,17 @@
           <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
           type="text" class="form-control" #search formControlName="offerLocation">
         </div>
+        <div class="form-group">
+        <label>Seleccionar imagen</label>
         <div class="custom-file">
-            <label>Seleccionar imagen</label>
           <input type="file" class="custom-file-input" id="validatedCustomFile" required 
           formControlName="offerFile" (change)="uploadFile($event.target.files)">
           <label class="custom-file-label" for="validatedCustomFile">{{fileName}}</label>
           <div class="invalid-feedback">Example invalid custom file feedback</div>
           <label *ngIf="showErrorUploadFile">Por favor selecciona un archivo de tipo png, jpg o jpeg</label>
         </div>
-        <button type="submit" [disabled]="!formdata.valid" value="Guardar">Guardar</button>
+      </div>
+        <button class="btn btn-primary" type="submit" [disabled]="!formdata.valid" value="Guardar">Guardar</button>
       </form>
   </div>
 </div>
