add link in login to reset password

--- a/src/app/_components/reset password/reset-password.component.html
+++ b/src/app/_components/reset password/reset-password.component.html
@@ -1,21 +1,21 @@
 <div class="container">
   <div class="container">
     <div [hidden]="submitted">
-      <h1>Reset your Password</h1>
+      <h1>Recupera tu contraseña</h1>
       <form #registerForm="ngForm">
 
         <div class="form-group">
-          <label for="email">Email</label>
+          <label for="email">Ingresa tu Email</label>
           <input type="email" class="form-control" id="email" required
                  [(ngModel)]="registerForm.email" name="email" #email="ngModel" ngModel [email]="true">
         </div>
         <div [hidden]="email.valid || email.pristine"
                class="alert alert-danger">
-            Email is required
+            El Email es obligatorio
           </div>
         
       
-        <button type="submit" class="btn btn-success" [disabled]="!registerForm.form.valid || !confirmpasswordValid || loading"  (click)="onSubmit(registerForm)">Submit</button>
+        <button type="submit" class="btn btn-success" [disabled]="!registerForm.form.valid || loading"  (click)="onSubmit(registerForm)">Recuperar</button>
         <!-- <button type="button" class="btn btn-default" (click)="newHero(); heroForm.reset()">New Hero</button> -->
   
       </form>
@@ -26,9 +26,9 @@
     </div>
 
     <div [hidden]="showError || !submitted">
-      <h2>Bienvenido {{ showUser().name }}, tus registro fue exitoso</h2>
+      <h4>Estimado usuario hemos enviado informaci&oacute;n al email {{user.email }}</h4>
       <br>
-      <button class="btn btn-primary" (click)="home()">Home</button>
+      <button class="btn btn-primary" (click)="home()">Volver</button>
     </div>
   </div>
 </div>
