--- a/src/app/_components/offer/offer.card.component.html
+++ b/src/app/_components/offer/offer.card.component.html
@@ -25,7 +25,7 @@
       <div class="col-md-8">
         <div class="card-body">
           <h5 class="card-title">{{offer.title}}</h5>
-          <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+          <p class="card-text">{{offer.description}}</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
