--- a/src/app/_components/edit-offers/edit-offer-card-list.component.html
+++ b/src/app/_components/edit-offers/edit-offer-card-list.component.html
@@ -10,11 +10,27 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">{{offer.title}}</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                <p class="card-text">{{offer.description}}</p>
                 <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-                <button class="btn btn-primary" (click)="deleteOffer(offer.id)" > Eliminar</button>
+                <!-- <button class="btn btn-primary" (click)="deleteOffer(offer.id)" > Eliminar</button> -->
+                <button class="btn btn-primary" (click)="open(offer.title, offer.id,template)" > Eliminar</button>
             </div>
         </div>
         </div>
     </div>
 </div>
+<ng-template #template>
+    <div class="modal-header">
+        <h4 class="modal-title"> Por favor confirmar</h4>
+        <button type="button" class="close" aria-label="Close" (click)="modal.close()">
+        <span aria-hidden="true">&times;</span>
+        </button>
+    </div>
+    <div class="modal-body">
+        <p> Vas a eliminar la oferta  <b>{{modal.title}}</b>, estas seguro?</p>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="btn btn-outline-dark" (click)="modal.close()">Close</button>
+        <button class="btn btn-primary" (click)="deleteOffer(modal.id)" > Eliminar</button>
+    </div>
+</ng-template>
