add adress of Offer

--- a/src/app/_components/map/map.component.html
+++ b/src/app/_components/map/map.component.html
@@ -35,6 +35,7 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">{{offer.title}}</h5>
+                                <small class="text-muted">{{offer.location}}</small>
                                 <p class="card-text">{{offer.description}}</p>
                                 <!--div class="row">
                                     <div class="col-md-8">
