--- a/src/app/_components/create-offer/create-offer.component.html
+++ b/src/app/_components/create-offer/create-offer.component.html
@@ -9,7 +9,7 @@
         <div class="form-group">
           <label for="cars">Tipo de oferta</label>
 
-          <select id="cars" class="form-control" required id="offerType" placeholder="Tipo de oferta" formControlName="offerType">
+          <select class="form-control" required id="offerType" placeholder="Tipo de oferta" formControlName="offerType" >
             <option value="" selected>Seleccione</option>
             <option value="make in home">Hecho en casa</option>
             <option value="service">Servicio</option>
@@ -25,7 +25,7 @@
         <div class="form-group">
           <label>Dirección</label>
           <input placeholder="search for location" autocorrect="off" autocapitalize="off" spellcheck="off" 
-          type="text" class="form-control" #search formControlName="offerLocation">
+          type="text" class="form-control" #search formControlName="offerLocation" id="offerLocation" >
         </div>
         <div class="form-group">
         <label>Seleccionar imagen</label>
