--- a/src/app/_components/edit-offers/edit-offer-card-list.component.html
+++ b/src/app/_components/edit-offers/edit-offer-card-list.component.html
@@ -10,8 +10,9 @@
         <div class="col-md-8">
             <div class="card-body">
                 <h5 class="card-title">{{offer.title}}</h5>
+                <small class="text-muted">{{offer.location}}</small>
                 <p class="card-text">{{offer.description}}</p>
-                <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                
                 <!-- <button class="btn btn-primary" (click)="deleteOffer(offer.id)" > Eliminar</button> -->
                 <button class="btn btn-primary" (click)="open(offer.title, offer.id,template)" > Eliminar</button>
             </div>
