--- a/src/app/_components/offer/offer.card.component.html
+++ b/src/app/_components/offer/offer.card.component.html
@@ -26,6 +26,7 @@
         <div class="card-body">
           <h5 class="card-title">{{offer.title}}</h5>
           <p class="card-text">{{offer.description}}</p>
+          <p class="">Last updated 3 mins ago</p>
           <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
         </div>
       </div>
